--- a/themes/kscu-theme/layouts/partials/home/page.html
+++ b/themes/kscu-theme/layouts/partials/home/page.html
@@ -3,6 +3,6 @@
   {{ end }}
   <section>{{ .Content | emojify }}</section>
 </article>
-<section>
+<section class="mb-6" style="margin-top: -20px">
   {{ partial "recent-articles.html" . }}
 </section>
