--- a/themes/kscu-theme/layouts/_default/single.html
+++ b/themes/kscu-theme/layouts/_default/single.html
@@ -7,24 +7,24 @@
       <h1 class="mt-0 text-4xl font-extrabold text-neutral-900">
         {{ .Title | emojify | upper }}
       </h1>
-      <div class="mt-8 mb-12 text-base text-neutral-500 dark:text-neutral-400 print:hidden text-right" id="metadata">
+      <div class="my-2 text-base text-neutral-500 dark:text-neutral-400 print:hidden text-right" style="text-transform: uppercase;" id="metadata">
         {{ partial "article-meta.html" (dict "context" . "scope" "single") }}
       </div>
     </header>
     <section class="flex flex-col max-w-full mt-0 prose dark:prose-invert lg:flex-row">
       {{ if and (.Params.showTableOfContents | default (.Site.Params.article.showTableOfContents | default false)) (in .TableOfContents "<ul") }}
         <div class="order-first px-0 lg:order-last lg:max-w-xs ltr:lg:pl-8 rtl:lg:pr-8">
-          <div class="toc ltr:pl-5 rtl:pr-5 print:hidden lg:sticky lg:top-10">
+          <div class="toc print:hidden lg:sticky lg:top-10">
             {{ partial "toc.html" . }}
           </div>
         </div>
       {{ end }}
       <!-- <div class="flex"> -->
-      <div id="content-wrapper" class="min-w-0 min-h-0 max-w-3xl">
+      <div id="content-wrapper" class="min-w-0 min-h-0 max-w-4xl">
         {{ .Content | emojify }}
       </div>
     </section>
-    <footer class="pt-8 max-w-prose print:hidden">
+    <footer class="py-4 max-w-full print:hidden">
       {{ partial "author.html" . }}
       {{ partial "sharing-links.html" . }}
       {{ partial "article-pagination.html" . }}
