--- a/themes/kscu-theme/layouts/partials/article-link.html
+++ b/themes/kscu-theme/layouts/partials/article-link.html
@@ -1,5 +1,5 @@
 <article>
-  <h3 class="flex items-center mt-6 text-xl font-semibold">
+  <h3 class="flex items-center mt-6 text-xl font-semibold uppercase">
     {{ with .Params.externalUrl }}
       <div>
         <a
