--- a/themes/kscu-theme/layouts/partials/article-pagination.html
+++ b/themes/kscu-theme/layouts/partials/article-pagination.html
@@ -6,8 +6,8 @@
       {{ $next = .PrevInSection }}
       {{ $prev = .NextInSection }}
     {{ end }}
-    <div class="pt-8">
-      <hr class="border-dotted border-neutral-300 dark:border-neutral-600" />
+    <div>
+      <hr class="border-dotted border-neutral-600" />
       <div class="flex justify-between pt-3">
         <span>
           {{ if $prev }}
