--- a/themes/kscu-theme/layouts/_default/list.html
+++ b/themes/kscu-theme/layouts/_default/list.html
@@ -12,7 +12,7 @@
       mt-12
     {{- else -}}
       mt-0
-    {{- end }} prose flex max-w-full flex-col dark:prose-invert lg:flex-row">
+    {{- end }} flex max-w-full flex-col dark:prose-invert lg:flex-row">
     {{ if $toc }}
     <div class="order-first px-0 lg:order-last lg:max-w-xs ltr:lg:pl-8 rtl:lg:pr-8">
       <div class="toc ltr:pl-5 rtl:pr-5 lg:sticky lg:top-10">
@@ -31,7 +31,7 @@
     <h2 class="mt-12 text-2xl font-bold text-neutral-700 first:mt-8 dark:text-neutral-300">
       {{ .Key }}
     </h2>
-    <hr class="border-dotted w-36 border-neutral-400" />
+    <hr class="border-dotted w-36 border-neutral-600" />
     {{ end }}
     {{ range .Pages }}
     {{ partial "article-link.html" . }}
