Added shortcodes support to Tina

--- a/themes/kscu-theme/layouts/shortcodes/alert.html
+++ b/themes/kscu-theme/layouts/shortcodes/alert.html
@@ -1,9 +1,9 @@
 <div class="alert flex px-4 py-3 rounded-md bg-primary-600">
   <span class="text-primary-400 ltr:pr-3 rtl:pl-3">
-    {{ partial "icon.html" (.Get 0 | default "triangle-exclamation") }}
+    {{ partial "icon.html" (.Get "icon" | default "triangle-exclamation") }}
   </span>
   <span class="text-neutral-300">
-    {{- .Inner | markdownify -}}
+    {{- .Get "body" | markdownify -}}
   </span>
   <style>
       .alert > span > a {
