Fixed positioning of show svgs

--- a/themes/kscu-theme/layouts/partials/show-details.html
+++ b/themes/kscu-theme/layouts/partials/show-details.html
@@ -65,7 +65,7 @@
                                     "></p>
                             </div>
                         </div>
-                        <div class="border border-l-2" style="width: 130px; height: 130px; overflow: hidden;">
+                        <div class="flex border border-l-2" style="width: 130px; height: 130px; overflow: hidden;">
                             <img id="left-image" class="object-scale-down" src=""
                                 style="width: 100%; height: 100%;margin: auto;display: block;">
                         </div>
@@ -142,7 +142,7 @@
                                                     "></p>
                             </div>
                         </div>
-                        <div class="border border-l-2" style="width: 130px; height: 130px; overflow: hidden;">
+                        <div class="flex border border-l-2" style="width: 130px; height: 130px; overflow: hidden;">
                             <img id="right-image" src="" class="object-scale-down"
                                 style="width: 100%; height: 100%;margin: auto;display: block;">
                         </div>
