Finished removing traces of dark mode.

--- a/themes/kscu-theme/layouts/_default/baseof.html
+++ b/themes/kscu-theme/layouts/_default/baseof.html
@@ -5,8 +5,7 @@
     rtl
   {{- else -}}
     ltr
-  {{- end }}" class="scroll-smooth" data-default-appearance="{{ .Site.Params.defaultAppearance | default " light" }}"
-  data-auto-appearance="{{ .Site.Params.autoSwitchAppearance | default " true" }}">
+  {{- end }}" class="scroll-smooth">
 {{- partial "head.html" . -}}
 
 <body
