Filtered out breaks in show descriptions and added max heights.

--- a/themes/kscu-theme/assets/css/main.css
+++ b/themes/kscu-theme/assets/css/main.css
@@ -334,3 +334,7 @@ html {
   margin-top: 0 !important;
   margin-bottom: 0 !important;
 }
+
+::-webkit-scrollbar-corner {
+  background: rgba(0, 0, 0, 0.5);
+}
