--- a/themes/kscu-theme/layouts/partials/show-details.html
+++ b/themes/kscu-theme/layouts/partials/show-details.html
@@ -65,9 +65,8 @@
                                     "></p>
                             </div>
                         </div>
-                        <div class="flex border border-l-2" style="width: 130px; height: 130px; overflow: hidden;">
-                            <img id="left-image" class="object-scale-down" src=""
-                                style="width: 100%; height: 100%;margin: auto;display: block;">
+                        <div class="flex border border-l-2 items-center justify-center overflow-hidden" style="width: 130px; height: 130px;">
+                            <img id="left-image" class="min-w-full min-h-full object-cover" src="">
                         </div>
                     </div>
                     <div id="left-description-div" class="inline-flex grow-0 text-wrap border border-t-0"
