--- a/themes/kscu-theme/layouts/partials/show-details.html
+++ b/themes/kscu-theme/layouts/partials/show-details.html
@@ -70,7 +70,7 @@
                         </div>
                     </div>
                     <div id="left-description-div" class="inline-flex grow-0 text-wrap border border-t-0"
-                        style="display: none; overflow: scroll; max-height: 250px;">
+                        style="display: none; overflow: auto; max-height: 250px;">
                         <p id="left-description" class="my-1 mx-2" style="
                                                             font-family: 'Roboto Condensed';
                                                             font-style: normal;
@@ -146,7 +146,7 @@
                         </div>
                     </div>
                     <div id="right-description-div" class="inline-flex grow-0 text-wrap border border-t-0"
-                        style="display: none; overflow: scroll; max-height: 250px;">
+                        style="display: none; overflow: auto; max-height: 250px;">
                         <p id="right-description" class="my-1 mx-2" style="
                                         font-family: 'Roboto Condensed';
                                         font-style: normal;
